Artist, stream pages, menu, index song listing
- Fixed song listing on artist pages
- Fixed artist page generation
- Sorted artist listing
- Added menu and moved displayed titles to the template
- Linking songs from artist pages
- Added a page for streams and collected the data for it manually
- Implemented Popular and Hidden Songs on the index page
- Bunch of fixes of URLs and such

--- a/_config.yml
+++ b/_config.yml
@@ -19,5 +19,5 @@ page_gen:
     template: song
     name: sname
   - data: artists
-    template: song
-    name: sid
+    template: artist
+    name: sname
