Using song ID (again) and manually setting all titles

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: /HiddenSounds
 page_gen:
   - data: songs
     template: song
-    name: sname
+    name: sid
   - data: artists
     template: artist
     name: sname
