--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -113,7 +113,11 @@
 - date: '2019-06-13'
   host: 'Au5'
   streamer: 'Approaching Nirvana'
+- date: '2019-06-18'
+  host: '!Chill'
+  streamer: 'Approaching Nirvana'
 - date: '2019-06-20'
   host: 'Sublab'
+  streamer: 'Approaching Nirvana'
 - date: '2019.06.27'
   host: 'Miyoki'
