Added tracklist for first stream
Still WIP

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -2,6 +2,62 @@
   host: 'Voicians'
   streamer: 'Anna Yvette'
   live: true
+  tracklist:
+    - artist: 'Voicians'
+      title: 'Devotion'
+    - artist: 'Voicians'
+      title: 'Loop'
+      link: 'https://open.spotify.com/track/2g85NHqwJ2qEg8MZwa3SWb?si=qV2JKwEaS3ib2JAHJJnEEw'
+    - artist: 'Anna Yvette'
+      title: 'The End'
+      link: 'https://open.spotify.com/track/5YwUIxuEcE6cd4DK2GAQ9q?si=5YXSOOF3QkuDyQp1-C7BEw'
+    - artist: 'Varien'
+      title: 'Blood Hunter'
+    - artists: [ 'Rameses B', 'Zoe Moon' ]
+      title: 'Eclipse'
+      link: 'https://open.spotify.com/track/1JDzWvYkEbQ3stuReNJsfk?si=j0J-hE9nTtGRFrx4_Ivb0A'
+    - artist: 'Voicians'
+      title: 'Endure'
+      link: 'https://open.spotify.com/track/6JZmx8ipiHx0JiKLSwOg2z?si=nKrm4hWlQwWS1SJ_zTssVQ'
+    - artist: 'Voicians'
+      title: '?'
+    - artists: [ 'Arc North', 'Agiya' ]
+      title: 'Dark Side (feat. Agiya)'
+    - artist: 'Voicians'
+      title: '?'
+    - artist: '?'
+      title: '?'
+    - artist: 'Voicians'
+      title: 'Telepathetic'
+      link: 'https://open.spotify.com/track/4SbNROn7kq8sw2oFfrlT0g?si=ZTenGzebSrexcJuXyFMhSg'
+    - artists: [ 'Mr. Bill', 'Of The Trees' ]
+      title: 'Pish Posh'
+      link: 'https://open.spotify.com/track/7sNw9S1Jird6Mh4p8BXIAF?si=YimTZ-q6RD20vMLL4Wxy9A'
+    - artist: 'Voicians'
+      title: 'Wolves'
+    - artist: 'Voicians'
+      title: 'Forsaken'
+      link: 'https://open.spotify.com/track/4cIlELdvlCXZKrJj06e3EI?si=rtVzXo_-RdOfqvJxoS85qQ'
+    - artist: 'Haywyre'
+      title: 'Storyteller'
+    - artist: 'Voicians'
+      title: 'Riddle'
+      link: 'https://open.spotify.com/track/5qJU2zfQ0XsTfZbihQWEyT?si=1LETzMMJQUmnXRwj78fh-Q'
+    - aritsts: [ 'Elliot Berger', 'Laura Brehm' ]
+      title: 'Believe'
+    - artists: [ 'Approaching Nirvana', 'Cara Leigh' ]
+      title: 'Lost the Signal'
+    - artist: 'Approaching Nirvana'
+      title: 'Leap'
+    - artist: 'Voicians'
+      title: 'Angels'
+    # ?
+    # ?
+    - artist: 'Rameses B'
+      title: 'Space Race'
+    - artist: 'Voicians'
+      title: 'Touch Me Hurt Me'
+      link: 'https://open.spotify.com/track/29K8kP8UZ2JPil2gXEjeSv?si=tg2jNJT5R72UXu9cqhAxUg'
 - date: '2019-01-31'
   host: '!Roundup'
   streamer: 'Anna Yvette'
@@ -119,5 +175,9 @@
 - date: '2019-06-20'
   host: 'Sublab'
   streamer: 'Approaching Nirvana'
-- date: '2019.06.27'
+- date: '2019-06-25'
+  host: '!Chill'
+  streamer: 'Cara Leigh'
+- date: '2019-06-27'
   host: 'Miyoki'
+  streamer: 'Approaching Nirvana'
