Stream list complete + 3 columns
#2

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -1,3 +1,68 @@
+- date: '2018-06-28'
+  host: 'Anna Yvette'
+- date: '2018-07-05'
+  host: 'Approaching Nirvana'
+- date: '2018-07-12'
+  host: 'Electro Light'
+- date: '2018-07-19'
+  host: 'Varien'
+- date: '2018-07-26'
+  host: 'Tim Schaufert'
+- date: '2018-08-02'
+  host: '?Roundup'
+- date: '2018-08-09'
+  host: 'Laura Brehm, Rival, Arc North'
+- date: '2018-08-23'
+  host: 'Jim Yosef'
+- date: '2018-08-30'
+  host: 'Rob Gasser'
+- date: '2018-09-06'
+  host: '?Roundup'
+  streamer: 'Approaching Nirvana'
+- date: '2018-09-13'
+  host: 'Sublab'
+- date: '2018-09-20'
+  host: 'Veela'
+- date: '2018-09-27'
+  host: 'floatinurboat'
+- date: '2018-10-04'
+  host: 'Anna Yvette'
+- date: '2018-10-11'
+  host: 'Hudson Lee'
+- date: '2018-10-18'
+  host: '!AMA'
+  amaHost: 'Anna Yvette, Laura Brehm, Approaching Nirvana'
+  live: true
+- date: '2018-10-25'
+  host: 'Anna Yvette'
+- date: '2018-11-01'
+  host: 'Approaching Nirvana'
+- date: '2018-11-08'
+  host: 'Arc North'
+- date: '2018-11-15'
+  host: 'CASHFORGOLD'
+- date: '2018-11-22'
+  host: 'Anna Yvette'
+- date: '2018-11-29'
+  host: '?Roundup'
+- date: '2018-12-06'
+  host: 'Cara Leigh'
+- date: '2018-12-13'
+  host: 'Atlas in Motion'
+- date: '2018-12-20'
+  host: 'Arc North, Rival'
+- date: '2018-12-27'
+  host: 'Approaching Nirvana'
+- date: '2019-01-03'
+  host: '!Yearmix'
+  year: 2018
+- date: '2019-01-04'
+  host: '!Yearmix'
+  year: 2018
+- date: '2019-01-10'
+  host: 'Alden Groves'
+- date: '2019-01-17'
+  host: 'Hyper Potions'
 - date: '2019-01-24'
   host: 'Voicians'
   streamer: 'Anna Yvette'
@@ -59,21 +124,21 @@
       title: 'Touch Me Hurt Me'
       link: 'https://open.spotify.com/track/29K8kP8UZ2JPil2gXEjeSv?si=tg2jNJT5R72UXu9cqhAxUg'
 - date: '2019-01-31'
-  host: '!Roundup'
+  host: '?Roundup'
   streamer: 'Anna Yvette'
 - date: '2019-02-07'
-  host: '!Throwback'
+  host: '?Throwback'
   streamer: 'Anna Yvette'
   throwbackHost: 'Sublab'
 - date: '2019-02-14'
   host: 'Rameses B'
   streamer: 'Anna Yvette'
 - date: '2019-02-21'
-  host: '!Throwback'
+  host: '?Throwback'
   streamer: 'Approaching Nirvana'
   throwbackHost: 'Laura Brehm, Arc North, Rival'
 - date: '2019-02-28'
-  host: '!Roundup'
+  host: '?Roundup'
   streamer: 'Approaching Nirvana'
 - date: '2019-03-05'
   host: '!Chill'
@@ -85,14 +150,14 @@
   host: '!Chill'
   streamer: 'Anna Yvette'
 - date: '2019-03-14'
-  host: '!Throwback'
+  host: '?Throwback'
   streamer: 'Anna Yvette'
   throwbackHost: 'floatinurboat'
 - date: '2019-03-19'
   host: '!Chill'
   streamer: 'Anna Yvette'
 - date: '2019-03-21'
-  host: '!Throwback'
+  host: '?Throwback'
   streamer: 'Anna Yvette'
   throwbackHost: 'CASHFORGOLD'
 - date: '2019-03-26'
@@ -123,7 +188,7 @@
   host: '!Chill'
   streamer: 'Anna Yvette'
 - date: '2019-04-25'
-  host: '!Throwback'
+  host: '?Throwback'
   streamer: 'Approaching Nirvana'
   throwbackHost: 'Arc North'
 - date: '2019-04-30'
@@ -137,7 +202,7 @@
   host: '!Chill'
   streamer: 'Anna Yvette'
 - date: '2019-05-09'
-  host: '!Roundup'
+  host: '?Roundup'
   streamer: 'Cara Leigh'
 - date: '2019-05-14'
   host: '!Chill'
@@ -161,7 +226,7 @@
   host: '!Chill'
   streamer: 'Anna Yvette'
 - date: '2019-06-06'
-  host: '!Roundup'
+  host: '?Roundup'
   streamer: 'Anna Yvette'
 - date: '2019-06-11'
   host: '!Chill'
