Thursday was early this week

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -246,3 +246,6 @@
 - date: '2019-06-27'
   host: 'Miyoki'
   streamer: 'Approaching Nirvana'
+- date: '2019-07-02'
+  host: '?Roundup'
+  streamer: 'Cara Leigh'
