Updated first stream tracklist
And added gitignore

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -89,15 +89,17 @@
     - artists: [ 'Arc North', 'Agiya' ]
       title: 'Dark Side (feat. Agiya)'
     - artist: 'Voicians'
-      title: '?'
-    - artist: '?'
-      title: '?'
+      title: 'Survival League'
+      link: 'https://open.spotify.com/track/59IvIDPRshOj9Ty2he8KOI?si=C0gGQg0hQbG2H63tS85G9A'
+    - artists: [ 'Sublab', 'Azaleh' ]
+      title: 'Continuum'
     - artist: 'Voicians'
       title: 'Telepathetic'
       link: 'https://open.spotify.com/track/4SbNROn7kq8sw2oFfrlT0g?si=ZTenGzebSrexcJuXyFMhSg'
     - artists: [ 'Mr. Bill', 'Of The Trees' ]
       title: 'Pish Posh'
       link: 'https://open.spotify.com/track/7sNw9S1Jird6Mh4p8BXIAF?si=YimTZ-q6RD20vMLL4Wxy9A'
+      #?
     - artist: 'Voicians'
       title: 'Wolves'
     - artist: 'Voicians'
@@ -118,11 +120,27 @@
       title: 'Angels'
     # ?
     # ?
+    - artist: 'Approaching Nirvana'
+      title: 'Not This Time'
     - artist: 'Rameses B'
       title: 'Space Race'
     - artist: 'Voicians'
       title: 'Touch Me Hurt Me'
       link: 'https://open.spotify.com/track/29K8kP8UZ2JPil2gXEjeSv?si=tg2jNJT5R72UXu9cqhAxUg'
+    - artist: 'Electro-Light'
+      title: 'Discovery'
+    - artist: 'Varien'
+      title: 'Claws'
+    #?
+    - artist: 'Voicians'
+      title: 'Tweeday Theme'
+      link: 'https://open.spotify.com/track/2JgeYPiw2WKBVsnNromiBh?si=4NSRFFTIS2Kfdrp-jGtpnQ'
+    - artist: 'Anna Yvette'
+      title: 'Rainbow Dream'
+    #?
+    - artist: 'MYLK'
+      title: 'Mashmallow Disco'
+      link: 'https://open.spotify.com/track/63d4BntRS4qWSoq5Uciq46?si=6pkBGCc9TKqzzrskLKecWQ'
 - date: '2019-01-31'
   host: '?Roundup'
   streamer: 'Anna Yvette'
@@ -213,18 +231,23 @@
 - date: '2019-05-21'
   host: '!Chill'
   streamer: 'Anna Yvette'
+  video: 'https://www.youtube.com/watch?v=SyKKsmdI7ZM'
 - date: '2019-05-23'
   host: 'Laura Brehm'
   streamer: 'Anna Yvette'
+  video: 'https://www.youtube.com/watch?v=oKYqpqw6z-A'
 - date: '2019-05-28'
   host: '!Chill'
   streamer: 'Anna Yvette'
+  video: 'https://www.youtube.com/watch?v=l2E6aCSH6uc'
 - date: '2019-05-30'
   host: 'Zoe Moon'
   streamer: 'Anna Yvette'
+  video: 'https://www.youtube.com/watch?v=12Dw26xKUAU'
 - date: '2019-06-04'
   host: '!Chill'
   streamer: 'Anna Yvette'
+  video: 'https://www.youtube.com/watch?v=IzMb3SWD9m0'
 - date: '2019-06-06'
   host: '?Roundup'
   streamer: 'Anna Yvette'
@@ -234,6 +257,7 @@
 - date: '2019-06-13'
   host: 'Au5'
   streamer: 'Approaching Nirvana'
+  video: 'https://www.youtube.com/watch?v=LL4N99aA_KI'
 - date: '2019-06-18'
   host: '!Chill'
   streamer: 'Approaching Nirvana'
