--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -273,3 +273,12 @@
 - date: '2019-07-02'
   host: '?Roundup'
   streamer: 'Cara Leigh'
+- date: '2019-07-09'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2019-07-11'
+  host: 'Approaching Nirvana'
+  streamer: 'Approaching Nirvana'
+- date: '2019-07-16'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
