--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -282,3 +282,23 @@
 - date: '2019-07-16'
   host: '!Chill'
   streamer: 'Anna Yvette'
+- date: '2019-07-23'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2019-07-25'
+  host: 'floatinurboat'
+  streamer: 'floatinurboat'
+- date: '2019-07-30'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2019-08-01'
+  host: '?Roundup'
+  streamer: 'Approaching Nirvana'
+- date: '2019-08-06'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2019-08-08'
+  host: '?Throwback'
+  throwbackHost: 'Varien'
+  streamer: 'Approaching Nirvana'
+
