--- a/_data/songextra.yml
+++ b/_data/songextra.yml
@@ -401,3 +401,43 @@
     Break this whole addiction
     But I don’t know anymore
     Think I gotta let go
+- sid: 7B2pRsFVYT0ntK7xKbQwsn
+  lyrics: |
+    Riding down the Parkway in the Twilight
+    Wind in our hair getting high without a care
+    Ooh yeah
+    Pull up to the Bonfire Crack another cold one
+    Turn the Speakers up
+    Cos we dont’ give a fuck
+    We gonna party till the sun comes up
+    Dancing Queens
+    Living in a Rainbow Dream
+    Seventeen Living in a Rainbow Dream
+    A Rainbow Dream
+    All the Colors in the Air
+    Feel the Magic Everywhere
+    In a Rainbow Dream
+    In a Rainbow Dream
+    (All the Colors in the Air, Feel the Magic Everywhere)
+    In a Rainbow Dream
+    Living in a Rainbow Dream
+    We’re all just living for that moment
+    TIme slows down and you take a look around
+    Just like in the movies
+    when everybody’s laughing hey hey
+    Clinking drinks and relaxing
+    So turn the Speakers up
+    Cos we don’t give a fuck
+    We gonna party till the sun comes up
+    Dancing Queens
+    Living in a Rainbow Dream
+    Seventeen
+    Living in a Rainbow Dream
+    A Rainbow Dream
+    All the Colors in the Air
+    Feel the Magic Everywhere
+    In a Rainbow Dream
+    In a Rainbow Dream (All the Colors in the Air)
+    Colors in the Air (Feel the Magic Everywhere)
+    In a Rainbow Dream
+    Living in a Rainbow Dream
