--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -3,7 +3,7 @@
 - date: '2018-07-05'
   host: 'Approaching Nirvana'
 - date: '2018-07-12'
-  host: 'Electro Light'
+  host: 'Electro-Light'
 - date: '2018-07-19'
   host: 'Varien'
 - date: '2018-07-26'
@@ -12,6 +12,8 @@
   host: '?Roundup'
 - date: '2018-08-09'
   host: 'Laura Brehm, Rival, Arc North'
+- date: '2018-08-16'
+  host: ''
 - date: '2018-08-23'
   host: 'Jim Yosef'
 - date: '2018-08-30'
@@ -301,4 +303,43 @@
   host: '?Throwback'
   throwbackHost: 'Varien'
   streamer: 'Approaching Nirvana'
-
+- date: '2019-08-15'
+  host: 'Electro-Light'
+  streamer: 'Approaching Nirvana'
+- date: '2019-08-22'
+  host: 'Zoe Moon'
+  streamer: 'Approaching Nirvana'
+- date: '2019-08-29'
+  host: '?Roundup'
+  streamer: 'Approaching Nirvana'
+  tracklist:
+    - artist: 'Faodail'
+      title: 'Nostos (Returning)'
+    - artists: ['Kooma', 'Miyoki', 'Veela']
+      title: 'Answers'
+    - artist: 'Miyoki'
+      title: 'Boats & Birds'
+    - artists: ['Electro-Light', 'AWR']
+      title: 'Love Will Find You'
+    - artist: 'Tim Schaufert'
+      title: 'Journey'
+    - artists: ['Laura Brehm', 'Mr. Bill']
+      title: 'i2i'
+    #AK?
+    - artist: 'Cara Leigh'
+      title: 'Part of Me'
+    - artists: ['Tim Schaufert', 'Acacia']
+      title: 'It's Going to Be Alright'
+    - artists: ['Electro Light', 'AWR']
+      title: 'Under A Minute'
+    - artists: ['Approaching Nirvana', 'TryHardNinja']
+      title: 'Revenge Remix'
+    - artists: ['Electro-Light', 'AWR']
+      title: 'Don't Allow'
+    - artist: 'Sekai'
+      title: 'Cherry'
+    - artist: 'Faodail'
+      title: 'Gael'
+      #
+    - artist: 'Faodail'
+      title: 'Untethered'
