Escape apostrophes and make the gen plugin not spam

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -329,13 +329,13 @@
     - artist: 'Cara Leigh'
       title: 'Part of Me'
     - artists: ['Tim Schaufert', 'Acacia']
-      title: 'It's Going to Be Alright'
+      title: 'It''s Going to Be Alright'
     - artists: ['Electro Light', 'AWR']
       title: 'Under A Minute'
     - artists: ['Approaching Nirvana', 'TryHardNinja']
       title: 'Revenge Remix'
     - artists: ['Electro-Light', 'AWR']
-      title: 'Don't Allow'
+      title: 'Don''t Allow'
     - artist: 'Sekai'
       title: 'Cherry'
     - artist: 'Faodail'
