Add streamers for earlier streams

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -45,26 +45,35 @@
   host: 'CASHFORGOLD'
 - date: '2018-11-22'
   host: 'Anna Yvette'
+  streamer: 'Anna Yvette'
 - date: '2018-11-29'
   host: '?Roundup'
+  streamer: 'Cara Leigh'
 - date: '2018-12-06'
   host: 'Cara Leigh'
+  streamer: 'Cara Leigh'
 - date: '2018-12-13'
   host: 'Atlas in Motion'
+  streamer: 'Cara Leigh'
 - date: '2018-12-20'
   host: 'Arc North, Rival'
 - date: '2018-12-27'
   host: 'Approaching Nirvana'
+  streamer: 'Approaching Nirvana'
 - date: '2019-01-03'
   host: '!Yearmix'
   year: 2018
+  streamer: 'Anna Yvette'
 - date: '2019-01-04'
   host: '!Yearmix'
   year: 2018
+  streamer: 'Anna Yvette'
 - date: '2019-01-10'
   host: 'Alden Groves'
+  streamer: 'Anna Yvette'
 - date: '2019-01-17'
   host: 'Hyper Potions'
+  streamer: 'Anna Yvette'
 - date: '2019-01-24'
   host: 'Voicians'
   streamer: 'Anna Yvette'
