Add missing stream host
On stream anniversary

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -13,7 +13,7 @@
 - date: '2018-08-09'
   host: 'Laura Brehm, Rival, Arc North'
 - date: '2018-08-16'
-  host: ''
+  host: 'AK'
 - date: '2018-08-23'
   host: 'Jim Yosef'
 - date: '2018-08-30'
