Add today's stream

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -358,4 +358,7 @@
   amaHost: 'Anna Yvette, Electro-Light, floatinurboat, Laura Brehm'
   streamer: 'floatinurboat'
   live: true
+- date: '2021-01-26'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
 
