Add new streams

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -361,4 +361,25 @@
 - date: '2021-01-26'
   host: '!Chill'
   streamer: 'Anna Yvette'
+- date: '2021-01-28'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-02-02'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-02-04'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-02-09'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-02-11'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-02-16'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-02-18'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
 
