Add streams and update data

--- a/_data/streams.yml
+++ b/_data/streams.yml
@@ -382,4 +382,19 @@
 - date: '2021-02-18'
   host: '!Chill'
   streamer: 'Anna Yvette'
+- date: '2021-02-25'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-03-02'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-03-04'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-03-23'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
+- date: '2021-03-25'
+  host: '!Chill'
+  streamer: 'Anna Yvette'
 
